const grpc = require('grpc');
const protoLoader = require('@grpc/proto-loader');

// Load protobuf file
const packageDefinition = protoLoader.loadSync('path/to/your/proto/file.proto');
const grpcObject = grpc.loadPackageDefinition(packageDefinition);

// Get the OrderService object and create a gRPC server
const orderService = grpcObject.OrderService;
const server = new grpc.Server();

// Implement the logic for creating an order
const createOrder = (call, callback) => {
  const user_id = call.request.user_id;
  const ticket = call.request.ticket;
  // Generate a random order ID
  const order_id = Math.random().toString(36).substr(2, 9);
  console.log('Order created:', order_id);
  callback(null, { order_id: order_id });
};

// Implement the logic for getting an order
const getOrder = (call, callback) => {
  const order_id = call.request.order_id;
  const order = { order_id: order_id, event_name: 'Event A', event_location: 'Location A', event_date: '2023-05-01', available_seats: 100, ticket_price: 50.0 };
  console.log('Order:', order);
  callback(null, { order: order });
};

// Implement the logic for cancelling an order
const cancelOrder = (call, callback) => {
  const order_id = call.request.order_id;
  const success = true;
  console.log('Order cancelled:', order_id);
  callback(null, { success: success });
};

// Add the methods to the server
server.addService(orderService.service, { CreateOrder: createOrder, GetOrder: getOrder, CancelOrder: cancelOrder });

// Start the server
server.bind('0.0.0.0:50051', grpc.ServerCredentials.createInsecure());
console.log('Server running at http://0.0.0.0:50051');
server.start();
